heart/modules/Media/assets/css/style.css
.relative{ position: relative; }
.absolute{ position: absolute; }
.overflow{ overflow: hidden; }

form.form input{
	height: auto;
}

#m_ajax_error{
	width: 90%;
	padding: 5px 10px;
	margin: 0 auto;
	border: 1px solid #FF8787;
	background: #FFF4F4;

	-webkit-border-radius: 2px;
	-moz-border-radius: 2px;
	-ms-border-radius: 2px;
	border-radius: 2px;

	-webkit-box-shadow: 0 0 3px #FFC4C4;
	-moz-box-shadow: 0 0 3px #FFC4C4;
	-ms-box-shadow: 0 0 3px #FFC4C4;
	box-shadow: 0 0 3px #FFC4C4;
}
#m_ajax_error p{
	margin: 0;
	padding: 0;
	color: #FF4F4F;
	text-shadow: 1px 1px 0 #fff;
}

/* ===== ===== Pagination ===== ===== */
#m_pagi_area{
	width: 95%;
	padding: 10px;
	margin: 10px auto;
}
ul#m_pagi{
	padding: 0 10px;
	border: 1px solid #ddd;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	-ms-border-radius: 3px;
	border-radius: 3px;
	display: inline-block;
	background: #f5fafa;
}
ul#m_pagi li{
	/*background: blue;*/
}
ul#m_pagi li a{
	display: block;
	margin-left: 3px;
	padding: 5px 10px;
}
ul#m_pagi span.sep{
	width: 8px;
	height: 28px;
	background: url('../img/sep.png') center left no-repeat;
}
li#m_current a{
	cursor: text;
	color: #222;
	font-weight: bold;
}

/* ===== ===== Forms ===== ==== */
form.form .form-block{
	border: none;
}
form.form .form-block textarea{ width: 75%; }
#cboxLoadedContent{ padding: 0 10px; }
.err_input{
	border: 1px solid #FF5454;
	-webkit-box-shadow: 0 0 3px  rgba(255,117,117,0.5);
	-moz-box-shadow: 0 0 3px  rgba(255,117,117,0.5);
	-ms-box-shadow: 0 0 3px  rgba(255,117,117,0.5);
	box-shadow: 0 0 3px  rgba(255,117,117,0.5);
}

/* ===== ===== Upload ===== ===== */
div#upload_field_wrap{
	width: 99%;
	height: 190px;
	margin: 0 auto;
	border: 3px dashed #d0d0d0;

	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	-ms-border-radius: 5px;
	border-radius: 5px;
}
div#upload_field_wrap p{
	font-size: 22px;
	color: #d0d0d0;
	text-align: center;
	font-weight: bold;
	margin-top: 70px;
}
input#fileupload{
	border: medium none;
    cursor: pointer;
    direction: ltr;
    margin: 0;
    opacity: 0;
    right: 278px;
    top: 41px;
    transform: translate(-725px, 41px) scale(10);
    -moz-transform: translate(-725px, 41px) scale(10);
   -webkit-transform: translate(-725px, 41px) scale(10);
   -o-transform: translate(-725px, 41px) scale(10);
   -ms-transform: translate(-725px, 41px) scale(10);
}

ul#m_uploaded{
	width: 100%;
	margin: 0;
}
ul#m_uploaded li{
	width: 96%;
	padding: 3px 10px;
	margin: 10px auto;
	background: #f0f0f0;
}
ul#m_uploaded li h3{
	font-size: 16px;
	font-weight: normal;
	width: 60%;
}
ul#m_uploaded li button.button-orange { padding: 4px 9px; }

div.m_uploaded_header{

}
div.m_upload_error{
	color: red;
	display: block;
    float: left;
    height: 20px;
    padding-top: 3px;
   /* width: 100px;*/
}

/* @ == @ Progress @ == @ */
div#progress_wrap{
	height: 20px;
	width: 25%;
	margin-top: 5px;
	margin-left: 15px;
}
div.m_progress{
	width: 100%;
	background-color: #F7F7F7;
	background-image: -moz-linear-gradient(center top , #F5F5F5, #F9F9F9);
	background-repeat: repeat-x;
	-webkit-border-radius: 4px;
	-moz-border-radius: 4px;
	-ms-border-radius: 4px;
	border-radius: 4px;
	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.2) inset;
	-moz-box-shadow: 0 1px 2px rgba(0,0,0,0.2) inset;
	-ms-box-shadow: 0 1px 2px rgba(0,0,0,0.2) inset;
	box-shadow: 0 1px 2px rgba(0,0,0,0.2) inset;

    height: 18px;
    margin-bottom: 18px;
    overflow: hidden;
}
/* ... */

